fix: scrollbar appear when sweetalert is display.

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -210,7 +210,3 @@ form {
     background: rgba(0, 0, 0, .5);
     border-radius: 4px;
 }
-
-body.swal2-shown:not(.swal2-no-backdrop):not(.swal2-toast-shown) {
-    overflow-y: visible !important;
-}
